--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -36,7 +36,7 @@ layout: default
                 {% if site.featured-tags %}
                 <section>
                     <!-- no hr -->
-                    <h5><a href="{{'/2-tags/' | prepend: site.baseurl }}">分类标签</a></h5>
+                    <h5><a href="{{'/2-tags/' | prepend: site.baseurl }}">最新动态</a></h5>
                     <div class="tags">
         				{% for tag in site.tags %}
                             {% if tag[1].size > {{site.featured-condition-size}} %}
