--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -143,7 +143,7 @@ layout: default
                 {% if site.featured-tags %}
                 <section>
                     <hr class="hidden-sm hidden-xs">
-                    <h5><a href="/2-tags/">分类标签</a></h5>
+                    <h5><a href="/2-tags/">最新动态</a></h5>
                     <div class="tags">
         				{% for tag in site.tags %}
                             {% if tag[1].size > {{site.featured-condition-size}} %}
