--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -85,7 +85,7 @@ layout: default
                 {% if site.featured-tags %}
                 <section>
                     <hr class="hidden-sm hidden-xs">
-                    <h5><a href="{{'/2-tags/' | prepend: site.baseurl }}">分类标签</a></h5>
+                    <h5><a href="{{'/2-tags/' | prepend: site.baseurl }}">最新动态</a></h5>
                     <div class="tags">
                         {% for tag in site.tags %}
                             {% if tag[1].size > {{site.featured-condition-size}} %}
@@ -186,7 +186,8 @@ layout: default
                             
                         </ul>
                         {% if site.email %}
-                            <p>邮箱: {{site.email}}</p>
+                            <p>社团邮箱: {{site.email}}</p>
+			    <p>负责人QQ: {{site.QQ}}</p>
                         {% endif %}
                     </div>
                 </section>
