--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -83,8 +83,8 @@ img.shadow{
 select{
 	-webkit-appearance:none;
 	margin-top:15px;
-	color:#337ab7;
-	border-color:#337ab7;
+	color:#1691cd;
+	border-color:#1691cd;
 	padding: 0em 0.4em;
 	background: white;
 	&.sel-lang{
@@ -125,7 +125,7 @@ pre code{
 // In the post.
 .post-container{
 	a{
-		color:#337ab7;
+		color:#1691cd;
 		// different to @brand-primary
 		&:hover,
 		&:focus {
@@ -585,7 +585,7 @@ footer {
 		text-align: center;
 		margin-bottom: 0;
 		a{
-			color:#337ab7;
+			color:#1691cd;
 			// different to @brand-primary
 			&:hover,
 			&:focus {
