--- a/css/syntax.css
+++ b/css/syntax.css
@@ -46,7 +46,7 @@
 .highlight .kp { font-weight: bold; }
 .highlight .kr { font-weight: bold; }
 .highlight .kt { color: #445588; font-weight: bold; }
-.highlight .m { color: #009999; }
+.highlight .m { color: ##1691cd; }
 .highlight .s { color: #dd1144; }
 .highlight .n { color: #333333; }
 .highlight .na { color: teal; }
@@ -61,10 +61,10 @@
 .highlight .nv { color: teal; }
 .highlight .ow { font-weight: bold; }
 .highlight .w { color: #bbbbbb; }
-.highlight .mf { color: #009999; }
-.highlight .mh { color: #009999; }
-.highlight .mi { color: #009999; }
-.highlight .mo { color: #009999; }
+.highlight .mf { color: #1691cd; }
+.highlight .mh { color: #1691cd; }
+.highlight .mi { color: #1691cd; }
+.highlight .mo { color: #1691cd; }
 .highlight .sb { color: #dd1144; }
 .highlight .sc { color: #dd1144; }
 .highlight .sd { color: #dd1144; }
@@ -80,5 +80,5 @@
 .highlight .vc { color: teal; }
 .highlight .vg { color: teal; }
 .highlight .vi { color: teal; }
-.highlight .il { color: #009999; }
+.highlight .il { color: #1691cd; }
 .highlight .gc { color: #999; background-color: #EAF2F5; }
