--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,6 @@
 // Variables
 
-@brand-primary: #0085A1;
+@brand-primary: #1691cd;
 @gray-dark: lighten(black, 25%);
 @gray: lighten(black, 50%);
 @gray-l: lighten(black, 75%);
