--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -26,14 +26,14 @@
 }
 .sidebar-container a:hover,
 .sidebar-container a:active {
-  color: #0085a1 !important;
+  color: #1691cd !important;
 }
 .sidebar-container .tags a {
   border-color: #bfbfbf;
 }
 .sidebar-container .tags a:hover,
 .sidebar-container .tags a:active {
-  border-color: #0085a1;
+  border-color: #1691cd;
 }
 .sidebar-container .short-about img {
   width: 80%;
@@ -122,7 +122,7 @@
   background-color: #F5F5F5;
 }
 .side-catalog .catalog-body .active a {
-  color: #0085a1!important;
+  color: #1691cd!important;
 }
 @media (max-width: 1200px) {
   .side-catalog {
@@ -166,7 +166,7 @@ a {
 }
 a:hover,
 a:focus {
-  color: #0085a1;
+  color: #1691cd;
 }
 a img:hover,
 a img:focus {
@@ -235,7 +235,7 @@ pre code {
 }
 .post-container a:hover,
 .post-container a:focus {
-  color: #0085a1;
+  color: #1691cd;
 }
 .post-container h1,
 .post-container h2,
@@ -477,14 +477,14 @@ pre code {
   }
   .navbar-custom.is-fixed .navbar-brand:hover,
   .navbar-custom.is-fixed .navbar-brand:focus {
-    color: #0085a1;
+    color: #1691cd;
   }
   .navbar-custom.is-fixed .nav li a {
     color: #404040;
   }
   .navbar-custom.is-fixed .nav li a:hover,
   .navbar-custom.is-fixed .nav li a:focus {
-    color: #0085a1;
+    color: #1691cd;
   }
   .navbar-custom.is-visible {
     /* if the user changes the scrolling direction, we show the header */
@@ -610,7 +610,7 @@ pre code {
 .post-preview > a:hover,
 .post-preview > a:focus {
   text-decoration: none;
-  color: #0085a1;
+  color: #1691cd;
 }
 .post-preview > a > .post-title {
   font-size: 21px;
@@ -638,7 +638,7 @@ pre code {
 }
 .post-preview > .post-meta > a:hover,
 .post-preview > .post-meta > a:focus {
-  color: #0085a1;
+  color: #1691cd;
   text-decoration: underline;
 }
 @media only screen and (min-width: 768px) {
@@ -660,7 +660,7 @@ pre code {
   color: #a3a3a3;
 }
 .post-content-preview:hover {
-  color: #0085a1;
+  color: #1691cd;
 }
 @media only screen and (min-width: 768px) {
   .post-content-preview {
@@ -700,7 +700,7 @@ footer .copyright a {
 }
 footer .copyright a:hover,
 footer .copyright a:focus {
-  color: #0085a1;
+  color: #1691cd;
 }
 .floating-label-form-group {
   font-size: 14px;
@@ -747,7 +747,7 @@ footer .copyright a:focus {
   opacity: 1;
 }
 .floating-label-form-group-with-focus label {
-  color: #0085a1;
+  color: #1691cd;
 }
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
@@ -772,8 +772,8 @@ form .row:first-child .floating-label-form-group {
 }
 .btn-default:hover,
 .btn-default:focus {
-  background-color: #0085a1;
-  border: 1px solid #0085a1;
+  background-color: #1691cd;
+  border: 1px solid #1691cd;
   color: white;
 }
 .pager {
@@ -809,8 +809,8 @@ form .row:first-child .floating-label-form-group {
 .pager li > a:hover,
 .pager li > a:focus {
   color: white;
-  background-color: #0085a1;
-  border: 1px solid #0085a1;
+  background-color: #1691cd;
+  border: 1px solid #1691cd;
 }
 .pager li > a:hover > span,
 .pager li > a:focus > span {
@@ -898,7 +898,7 @@ img::-moz-selection {
 #tag_cloud .tag:hover,
 #tag_cloud a:active,
 #tag_cloud .tag:active {
-  background-color: #0085a1 !important;
+  background-color: #1691cd !important;
 }
 @media only screen and (min-width: 768px) {
   #tag_cloud {
@@ -917,7 +917,7 @@ img::-moz-selection {
   margin-top: 0px;
 }
 .listing-seperator {
-  color: #0085a1;
+  color: #1691cd;
   font-size: 21px !important;
 }
 .listing-seperator::before {
