--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -497,7 +497,7 @@ pre code {
 }
 .intro-header {
   background: no-repeat center center;
-  background-color: #808080;
+  background-color: #1691cd;
   background-attachment: scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -540,7 +540,7 @@ pre code {
 .intro-header .site-heading h1,
 .intro-header .page-heading h1 {
   margin-top: 0;
-  font-size: 40px;
+  font-size: 30px;
 }
 .intro-header .site-heading .subheading,
 .intro-header .page-heading .subheading {
