--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<!-- 百度统计开始 -->
+<!-- 
 <script>
 var _hmt = _hmt || [];
 (function() {
@@ -8,7 +8,7 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
-<!-- 百度统计结束 -->
+百度统计 -->
 
 <head>
     <meta charset="utf-8">
