--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,15 +1,3 @@
-<!-- 
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?8b37e1725ff9b788d66d6f4d6cb8e048";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-百度统计 -->
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -64,5 +52,19 @@ var _hmt = _hmt || [];
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script></script>
+
+<script>
+  
+<!-- 百度统计开始 -->
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?8b37e1725ff9b788d66d6f4d6cb8e048";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+<!-- 百度统计结束 -->
+  
+</script>
+  
 </head>
