--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords"  content="{{ site.keyword }}">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
+    <meta name="msvalidate.01" content="22E6E7AA9D8470760CBC46FC882808A5" /><!-- 必应搜索引擎 -->
     
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
