--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -91,7 +91,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} 2022-{{ site.time | date: '%Y' }}
+                    Copyright &copy; 2022-{{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved. 
 
 <!-- github直链 -->
                     <!-- 
