--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -91,7 +91,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; 2022-{{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved. 
+                    版权所有 &copy; 2022-{{ site.time | date: '%Y' }} {{ site.title }} 保留所有权利
 
 <!-- github直链 -->
                     <!-- 
