--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,9 @@ layout: default
                     {% comment %} if page.subtitle {% endcomment %}
                     <h2 class="subheading">{{ page.subtitle }}</h2>
                     {% comment %} endif {% endcomment %}
-                    <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}</span>
+<!-- 发文信息开始 -->
+                    <span class="meta">{% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %}，{{ page.date | date: "%Y-%m-%d" }}</span>
+<!-- 发文信息结束 -->
                 </div>
             </div>
         </div>
