--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -91,7 +91,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    &copy; 2022-{{ site.time | date: '%Y' }} {{ site.title }} 版权所有
+                    Copyright &copy; 2022-{{ site.time | date: '%Y' }} {{ site.title }}
 
 <!-- github直链 -->
                     <!-- 
