--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,8 @@
 <!-- Footer -->
+<!-- 网站统计脚本不蒜子 -->   
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
+
 <footer>
     <div class="container">
         <div class="row">
@@ -16,9 +20,9 @@
                     {% endif %}
 
 
-<!-- 网站统计 -->                    
+<!-- 网站统计显示，已禁用                     
 本站总访问量<span id="busuanzi_value_site_pv"></span>次 | 本站访客数<span id="busuanzi_value_site_uv"></span>人次 | 本文总阅读量<span id="busuanzi_value_page_pv"></span>次
-
+-->
 
 
                     
