--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 <!-- Footer -->
-<!-- 网站统计脚本不蒜子 -->   
+
+<!-- 网站统计不蒜子脚本开始 -->   
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
 </script>
+<!-- 网站统计不蒜子脚本结束 -->   
 
 <footer>
     <div class="container">
@@ -20,9 +22,9 @@
                     {% endif %}
 
 
-<!-- 网站统计显示，已禁用                     
+<!-- 网站统计显示开始 -->              
 本站总访问量<span id="busuanzi_value_site_pv"></span>次 | 本站访客数<span id="busuanzi_value_site_uv"></span>人次 | 本文总阅读量<span id="busuanzi_value_page_pv"></span>次
--->
+<!-- 网站统计显示结束 -->  
 
 
                     
