--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,11 +66,8 @@ layout: default
 
                 <hr style="visibility: hidden;">
 
-<!-- 阅读量统计开始 -->
-<span id="busuanzi_container_page_pv">
-  本文总阅读量<span id="busuanzi_value_page_pv"></span>次
-</span>
-<!-- 阅读量统计结束 -->
+<!-- 阅读量统计 -->
+    <span id="busuanzi_container_page_pv" style="color: #bfbfbf; font-size: small; text-align: right; display: block;">阅读：<span id="busuanzi_value_page_pv"></span>人</span>
 
 		    
                 <ul class="pager">
