--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,10 +22,11 @@
                     {% endif %}
 
 
-<!-- 网站统计显示开始 -->              
-本站总访问量<span id="busuanzi_value_site_pv"></span>次 | 本站访客数<span id="busuanzi_value_site_uv"></span>人次 | 本文总阅读量<span id="busuanzi_value_page_pv"></span>次
-<!-- 网站统计显示结束 -->  
-
+<!-- 网站统计显示开始 -->
+        <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: block;">
+            本站总访问量<span id="busuanzi_value_site_pv"></span>次 | 本站访客数<span id="busuanzi_value_site_uv"></span>人
+        </span>
+        <!-- 网站统计显示结束 -->
 
                     
                     <!-- add jianshu add target = "_blank" to <a> by BY -->
