--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
 
 <!-- 网站统计显示开始 -->
         <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: block;">
-            本站总访问量<span id="busuanzi_value_site_pv"></span>次 | 本站访客数<span id="busuanzi_value_site_uv"></span>人
+            累计访问量<span id="busuanzi_value_site_pv"></span>次 | 访客数<span id="busuanzi_value_site_uv"></span>人
         </span>
         <!-- 网站统计显示结束 -->
 
