--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -67,7 +67,7 @@ layout: default
                 <hr style="visibility: hidden;">
 
 <!-- 阅读量统计 -->
-    <span id="busuanzi_container_page_pv" style="color: #bfbfbf; font-size: 12px; text-align: right !important; display: block;">阅读：<span id="busuanzi_value_page_pv"></span>人</span>
+    <span id="busuanzi_container_page_pv" style="color: #bfbfbf; font-size: 12px; text-align: left; display: block;">阅读：<span id="busuanzi_value_page_pv"></span>人</span>
 
 		    
                 <ul class="pager">
