--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,24 +45,15 @@
 
                     
     <!-- 网站运行时间模块开始 -->
-    <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: block;" id="elapsed-time">
+    <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: none;" id="elapsed-time">
     </span>
     <!-- 网站运行时间模块结束 -->
                     
     <!-- 网站统计显示开始 -->
-    <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: block;">
+    <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: none;">
         累计访问量<span id="busuanzi_value_site_pv"></span>次 | 访客数<span id="busuanzi_value_site_uv"></span>人
     </span>
     <!-- 网站统计显示结束 -->
-
-
-                    
-                    
-<!-- 旧版网站统计显示开始 
-        <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: block;">
-            累计访问量<span id="busuanzi_value_site_pv"></span>次 | 访客数<span id="busuanzi_value_site_uv"></span>人
-        </span>
-         旧版网站统计显示结束 -->
 
                     
                     <!-- add jianshu add target = "_blank" to <a> by BY -->
