--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,8 @@ layout: default
                     <h2 class="subheading">{{ page.subtitle }}</h2>
                     {% comment %} endif {% endcomment %}
 <!-- 发文信息开始 -->
-                    <span class="meta">作者：{% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} ㅤ日期：{{ page.date | date: "%Y-%m-%d" }}</span> ㅤ
+                    <span class="meta">作者：{% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} ㅤ日期：{{ page.date | date: "%Y-%m-%d" }}
+		    </span> ㅤ
 <!-- 发文信息结束 -->
 
 			
@@ -66,7 +67,7 @@ layout: default
 
                 <hr style="visibility: hidden;">
 
-<!-- 阅读量统计 -->
+<!-- 阅读量统计模块 -->
     <span id="busuanzi_container_page_pv" style="color: #bfbfbf; font-size: 12px; text-align: left; display: block;">阅读：<span id="busuanzi_value_page_pv"></span>次</span>
 
 		    
