--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,9 +54,8 @@
 
     <!-- ga & ba script hoook -->
 
-<script>
-  
 <!-- 百度统计开始 -->
+    <script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -64,8 +63,16 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-<!-- 百度统计结束 -->
-  
 </script>
+<!-- 百度统计结束 -->
+
+<!-- 顶部滚动字条 -->
+    <style>
+@keyframes marquee {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(-100%); }
+}
+</style>
+
   
 </head>
