--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,13 +66,13 @@ var _hmt = _hmt || [];
 </script>
 <!-- 百度统计结束 -->
 
-<!-- 顶部滚动字条 -->
+<!-- 顶部滚动字条样式开始 -->
     <style>
 @keyframes marquee {
     0% { transform: translateX(100%); }
     100% { transform: translateX(-100%); }
 }
 </style>
-
+<!-- 顶部滚动字条样式结束 -->
   
 </head>
