--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
     </script>
 <!-- 网站运行时间脚本结束 -->   
 
-<!-- Feedbase反馈工具 -->   
+<!-- Feedbase意见反馈工具模块 -->   
 <script src="https://www.feedbase.co/widget/v2.js" data-widget="a1171bd8-bf52-4ddc-b461-48c34e95d60b"></script>
 
 
