--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,9 +27,9 @@
     </script>
 <!-- 网站运行时间脚本结束 -->   
 
-<!-- Feedbase意见反馈工具模块 -->   
+<!-- Feedbase意见反馈工具模块（停用）
 <script src="https://www.feedbase.co/widget/v2.js" data-widget="a1171bd8-bf52-4ddc-b461-48c34e95d60b"></script>
-
+ -->   
 
 <footer>
     <div class="container">
