--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,7 +54,7 @@
 
     <!-- ga & ba script hoook -->
 
-<!-- 百度统计开始 -->
+<!-- 百度统计 -->
     <script>
 var _hmt = _hmt || [];
 (function() {
@@ -63,9 +63,10 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-
-            <!-- 页面加载完成后回滚顶部 -->
-
+    </script>
+    
+<!-- 页面加载完成后回滚顶部 -->
+    <script>
         window.onload = function() {
             window.scrollTo(0, 0);
         };
