--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,11 +65,12 @@ var _hmt = _hmt || [];
 })();
     </script>
     
-<!-- 页面加载完成后回滚顶部 -->
+<!-- 页面加载完成后回滚顶部
     <script>
         window.onload = function() {
             window.scrollTo(0, 0);
         };
     </script>
+     -->
   
 </head>
