--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,13 +12,14 @@
 
     {% include footer.html %}
 
-        <!-- 页面加载完成后回滚顶部 -->
+        <!-- 页面加载完成后回滚顶部
     <script>
         window.onload = function() {
             window.scrollTo(0, 0);
         };
     </script>
-
+ -->
+    
 <!-- Image to hack wechat -->
 <img src="/img/apple-touch-icon.png" width="0" height="0" />
 <!-- Migrate from head to bottom, no longer block render and still work -->
