--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
 <!-- 网站运行时间脚本开始 -->   
     <script>
         function calculateElapsedTime() {
-            const startTime = new Date('{{ site-run-date }}T{{ site-run-time }}');
+            const startTime = new Date({{ site-run-date }}'T'{{ site-run-time }});
             const now = new Date();
             const elapsedMilliseconds = now - startTime;
 
