--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,66 +5,10 @@
 </script>
 <!-- 网站统计脚本结束 -->   
 
-
-    <!-- 网站（新）运行时间脚本开始 
-    <script>
-        async function getConfig() {
-            try {
-                const response = await fetch('_config.yml');
-                const ymlText = await response.text();
-                return jsyaml.load(ymlText);
-            } catch (error) {
-                console.error('读取配置文件失败:', error);
-                return null;
-            }
-        }
-
-        async function getBeijingTime() {
-            try {
-                const response = await fetch('https://www.beijing-time.org/t/time.asp');
-                const text = await response.text();
-                const regex = /nyear=(\d+); nmonth=(\d+); nday=(\d+); nhrs=(\d+); nmin=(\d+); nsec=(\d+);/;
-                const match = text.match(regex);
-                if (match) {
-                    const [, year, month, day, hrs, min, sec] = match;
-                    return new Date(year, month - 1, day, hrs, min, sec);
-                }
-                console.error('解析北京时间失败');
-                return null;
-            } catch (error) {
-                console.error('获取北京时间失败:', error);
-                return null;
-            }
-        }
-
-        async function calculateElapsedTime() {
-            const config = await getConfig();
-            const now = await getBeijingTime();
-            if (config && now) {
-                const startTime = new Date(`${config.site_run_date}T${config.site_run_time}`);
-                const elapsedMilliseconds = now - startTime;
-
-                const totalSeconds = Math.floor(elapsedMilliseconds / 1000);
-                const days = Math.floor(totalSeconds / (3600 * 24));
-                const hours = Math.floor((totalSeconds % (3600 * 24)) / 3600);
-                const minutes = Math.floor((totalSeconds % 3600) / 60);
-                const seconds = totalSeconds % 60;
-
-                const elapsedTimeElement = document.getElementById('elapsed-time');
-                elapsedTimeElement.textContent = `网站本次已连续运行${days}天${hours}小时${minutes}分钟${seconds}秒`;
-            }
-        }
-
-        setInterval(calculateElapsedTime, 1000);
-    </script>
-     网站（新）运行时间脚本结束 -->
-
-
-
 <!-- 网站运行时间脚本开始 -->   
     <script>
         function calculateElapsedTime() {
-            const startTime = new Date('{{ site_run_time }}');
+            const startTime = new Date('2025-03-23T09:23:46');
             const now = new Date();
             const elapsedMilliseconds = now - startTime;
 
@@ -81,8 +25,6 @@
         setInterval(calculateElapsedTime, 1000);
     </script>
 <!-- 网站运行时间脚本结束 -->   
-
-
 
 <!-- Feedbase意见反馈工具模块（停用）
 <script src="https://www.feedbase.co/widget/v2.js" data-widget="a1171bd8-bf52-4ddc-b461-48c34e95d60b"></script>
