--- a/_includes/head.html
+++ b/_includes/head.html
@@ -73,8 +73,8 @@
     }
 
     #back-to-top img {
-        width: 30px;
-        height: 30px;
+        width: 50px;
+        height: 50px;
     }
 </style>
 
@@ -93,13 +93,12 @@ var _hmt = _hmt || [];
 })();
     </script>
     
-<!-- 页面加载完成后回滚顶部
+<!-- 页面加载完成后回滚顶部-->
     <script>
         window.onload = function() {
             window.scrollTo(0, 0);
         };
     </script>
-     -->
 
     <!-- 回到顶部按钮 -->
     <div id="back-to-top">
