--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,6 +70,7 @@
         align-items: center;
         cursor: pointer;
         transition: opacity 0.3s ease;
+        z-index: 1000;
     }
 
     #back-to-top img {
