--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,12 +59,12 @@
 <style>
     #back-to-top {
         position: fixed;
-        bottom: 20px;
+        bottom: 30px;
         right: 20px;
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: #1691cd;
         display: none;
         justify-content: center;
         align-items: center;
