--- a/_includes/head.html
+++ b/_includes/head.html
@@ -103,7 +103,7 @@ var _hmt = _hmt || [];
 
     <!-- 回到顶部按钮 -->
     <div id="back-to-top">
-        <img src="/img/back-to-top.webp" alt="Back to top">
+        <img src="/img/back-to-top.png" alt="Back to top">
     </div>
 
     <!-- 回到顶部按钮逻辑 -->
