--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,24 +56,6 @@
 
     
     <!-- 回到顶部按钮样式 -->
-
-    <!-- 
-        #back-to-top {
-        position: fixed;
-        bottom: 30px;
-        right: 20px;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        background-color: #1691cd; 
-        display: none;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        transition: opacity 0.3s ease;
-        z-index: 1000;
-    }
-    -->
     
 <style>
 
@@ -83,7 +65,8 @@
         right: 20px;
         width: 50px;
         height: 50px;
-        border-radius: 0%;
+        border-radius: 50%;
+        background-color: white; 
         display: none;
         justify-content: center;
         align-items: center;
