--- a/_includes/head.html
+++ b/_includes/head.html
@@ -63,8 +63,8 @@
         position: fixed;
         bottom: 30px;
         right: 20px;
-        width: 50px;
-        height: 50px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         background-color: white; 
         display: none;
@@ -73,11 +73,12 @@
         cursor: pointer;
         transition: opacity 0.3s ease;
         z-index: 1000;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
 
     #back-to-top img {
-        width: 50px;
-        height: 50px;
+        width: 30px;
+        height: 30px;
     }
 </style>
 
