--- a/_includes/head.html
+++ b/_includes/head.html
@@ -97,12 +97,13 @@ var _hmt = _hmt || [];
 })();
     </script>
     
-<!-- 页面加载完成后回滚顶部-->
+<!-- 页面加载完成后回滚顶部
     <script>
         window.onload = function() {
             window.scrollTo(0, 0);
         };
     </script>
+-->
 
     <!-- 回到顶部按钮 -->
     <div id="back-to-top">
