--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
 <!-- 网站统计脚本开始 -->   
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
 </script>
+<script defer src="https://busuanzi.9420.ltd/js"></script>
 <!-- 网站统计脚本结束 -->   
 
 <!-- 网站运行时间脚本开始 -->   
