--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -67,8 +67,12 @@ layout: default
 
                 <hr style="visibility: hidden;">
 
-<!-- 阅读量统计模块 -->
+<!-- 阅读量统计模块 		    
     <span id="busuanzi_container_page_pv" style="color: #bfbfbf; font-size: 12px; text-align: left; display: block;">阅读：<span id="busuanzi_value_page_pv"></span>次</span>
+		    -->
+		    
+<!-- 阅读量统计模块（新） -->    
+<span id="busuanzi_page_uv" style="color: #bfbfbf; font-size: 12px; text-align: left; display: block;">阅读：<span id="busuanzi_value_page_uv"></span>人</span>
 
 		    
                 <ul class="pager">
