--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,16 @@
     <meta name="keywords"  content="{{ site.keyword }}">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
     <meta name="msvalidate.01" content="22E6E7AA9D8470760CBC46FC882808A5" /><!-- 必应搜索引擎 -->
+
+    <!-- 微软统计开始 -->
+    <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "qtzpxhcgvv");
+</script>
+   <!-- 微软统计结束 -->
     
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
