--- a/_includes/head.html
+++ b/_includes/head.html
@@ -101,12 +101,19 @@
   color: white;
   font-size: 3em;
   text-align: center;
+}
+</style>
+
+    <!-- 
+    .maintenance-text {
+  color: white;
+  font-size: 3em;
+  text-align: center;
   padding: 20px;
   border: 2px solid white;
   border-radius: 10px;
 }
-</style>
-
+ -->
     
 </head>
 
