--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <!-- Footer -->
 
 <!-- 网站统计脚本开始 -->   
-<span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: block;">
-    累计访问量<span id="busuanzi_value_site_pv">{{ site.site-pv-data-control | plus: site.site_pv }}</span>次 | 访客数<span id="busuanzi_value_site_uv">{{ site.site-uv-data-control | plus: site.site_uv }}</span>人
-</span>
+    <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: block;">
+        累计访问量<span id="busuanzi_value_site_pv"></span>次 | 访客数<span id="busuanzi_value_site_uv"></span>人
+    </span>
 <!-- 网站统计脚本结束 -->   
 
 <!-- 网站运行时间脚本开始 -->   
