--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <!-- Footer -->
 
 <!-- 网站统计脚本开始 -->   
-    <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: block;">
-        累计访问量<span id="busuanzi_value_site_pv"></span>次 | 访客数<span id="busuanzi_value_site_uv"></span>人
-    </span>
+<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
+</script>
+<script defer src="https://busuanzi.9420.ltd/js"></script>
 <!-- 网站统计脚本结束 -->   
 
 <!-- 网站运行时间脚本开始 -->   
