--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -321,8 +321,8 @@
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         // 获取配置文件中的值
-        const sitePvDataControl = {{ site.site-pv-data-control }};
-        const siteUvDataControl = {{ site.site-uv-data-control }};
+        const sitePvDataControl = {{ site-pv-data-control }};
+        const siteUvDataControl = {{ site-uv-data-control }};
 
         // 等待 busuanzi 脚本加载完成
         const intervalId = setInterval(function () {
