--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -40,7 +40,7 @@
   display: block;
   border-radius: 0px;
   margin-bottom: 10px;
-  cursor: default;
+  cursor: pointer;
 }
 .sidebar-container .short-about p {
   margin-top: 0px;
