--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -137,7 +137,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; 2022-{{ site.time | date: '%Y' }} {{ site.title }}
+                    Copyright &copy; 2022-{{ site.time | date: '%Y' }} {{ site.title }} <a href="https://slyzmun.github.io/xieyi/">隐私协议</a>
 
 <!-- github直链 -->
                     <!-- 
