--- a/_includes/head.html
+++ b/_includes/head.html
@@ -90,7 +90,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+  background: black;
   z-index: 9999;
   display: none;
   justify-content: center;
