--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -138,9 +138,12 @@
                 </ul>
                 <p class="copyright text-muted">
                     Copyright &copy; 2022-{{ site.time | date: '%Y' }} {{ site.title }}
+
+                    <!-- 隐私协议（暂时隐藏）
                     <br>
                     <a href="https://slyzmun.github.io/xieyi/">隐私协议</a>
-
+                    -->
+                    
 <!-- github直链 -->
                     <!-- 
                     Theme on <a href="{{ site.github_repo }}">GitHub</a> |
