--- a/_includes/head.html
+++ b/_includes/head.html
@@ -125,7 +125,7 @@
 </div>
 
 <div id="maintenance-mask" class="maintenance-mask">
-  <div class="maintenance-text">网站例行维护中，请稍后再试</div>
+  <div class="maintenance-text">网站维护中<br>请稍后再试</div>
 </div>
 
 <!-- 全站开关脚本 -->
