--- a/_includes/head.html
+++ b/_includes/head.html
@@ -91,6 +91,7 @@
   width: 100%;
   height: 100%;
   background: black;
+  opacity: 0.8;
   z-index: 9999;
   display: none;
   justify-content: center;
