--- a/_includes/head.html
+++ b/_includes/head.html
@@ -90,8 +90,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: black;
-  opacity: 0.8;
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 9999;
   display: none;
   justify-content: center;
