--- a/_includes/head.html
+++ b/_includes/head.html
@@ -104,6 +104,16 @@
 }
 </style>
 
+/* 全局禁止选中文字 */
+    <style>
+        html, body {
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+        }
+    </style>
+
     <!-- 
     .maintenance-text {
   color: white;
