--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,6 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords"  content="{{ site.keyword }}">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
-    <meta name="msvalidate.01" content="22E6E7AA9D8470760CBC46FC882808A5" /><!-- 必应搜索引擎 -->
     
     <title>{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}</title>
 
@@ -37,13 +36,11 @@
     <!-- Hux change font-awesome CDN to qiniu -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-
     <!-- Hux Delete, sad but pending in China
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/
     css'>
     -->
-
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -54,9 +51,7 @@
 
     <!-- ga & ba script hoook -->
 
-    
     <!-- 回到顶部按钮样式 -->
-    
 <style>
     #back-to-top {
         position: fixed;
@@ -80,7 +75,6 @@
         height: 30px;
     }
     </style>
-
 
     <style>
     .maintenance-mask {
@@ -111,7 +105,6 @@
             -ms-user-select: none;
         }
     </style>
-
     <!-- 
     .maintenance-text {
   color: white;
@@ -122,11 +115,10 @@
   border-radius: 10px;
 }
  -->
-    
 </head>
 
 
-<!-- 全站开关遮罩层结构 -->
+<!-- 全站开关遮罩结构 -->
 <div id="site-config" 
      data-site-general-control="{% if site.site-general-control %}true{% else %}false{% endif %}"
      style="display: none;">
@@ -138,51 +130,17 @@
 
 <!-- 全站开关脚本 -->
 <script>
-// 通过模板引擎注入配置值
 document.addEventListener('DOMContentLoaded', function() {
   const mask = document.getElementById('maintenance-mask');
-  
-  // 从模板注入的配置值获取状态
   const siteGeneralControl = JSON.parse(
     document.getElementById('site-config').dataset.siteGeneralControl
   );
-
-  // 当配置值为 false 时显示维护遮罩
   if (siteGeneralControl === false) {
     mask.style.display = 'flex';
     document.body.style.overflow = 'hidden';
   }
 });
 </script>
-
-
-<!-- 百度统计https://tongji.baidu.com/ -->
-    <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?8b37e1725ff9b788d66d6f4d6cb8e048";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-    </script>
-
-<!-- 微软统计https://clarity.microsoft.com/ -->
-    <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "qtzpxhcgvv");
-</script>
-    
-<!-- 页面加载完成后回滚顶部
-    <script>
-        window.onload = function() {
-            window.scrollTo(0, 0);
-        };
-    </script>
--->
 
     <!-- 回到顶部按钮 -->
     <div id="back-to-top">
