--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,10 @@
-<!-- Footer -->
+<!-- 底部 -->
 
-<!-- 网站统计脚本开始 -->   
+<!-- 网站统计 -->   
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
 </script>
 <script defer src="https://busuanzi.9420.ltd/js"></script>
-<!-- 网站统计脚本结束 -->   
 
-<!-- 网站运行时间脚本开始 -->   
     <script>
         function calculateElapsedTime() {
             const startTime = new Date('2025-04-13T22:55:53');
@@ -25,7 +23,6 @@
 
         setInterval(calculateElapsedTime, 1000);
     </script>
-<!-- 网站运行时间脚本结束 -->   
 
 <!-- Feedbase意见反馈工具模块（停用）
 <script src="https://www.feedbase.co/widget/v2.js" data-widget="a1171bd8-bf52-4ddc-b461-48c34e95d60b"></script>
@@ -47,17 +44,14 @@
                     </li>
                     {% endif %}
 
-                    
-    <!-- 网站运行时间模块开始 -->
+    <!-- 运行时间 -->
     <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: block;" id="elapsed-time">
     </span>
-    <!-- 网站运行时间模块结束 -->
                     
-    <!-- 网站统计显示开始 -->
+    <!-- 网站统计显示 -->
     <span style="color: #bfbfbf; font-size: 12px; text-align: center !important; display: block;">
         累计访问量<span id="busuanzi_value_site_pv"></span>次 | 访客数<span id="busuanzi_value_site_uv"></span>人
     </span>
-    <!-- 网站统计显示结束 -->
 
                     <!-- add jianshu add target = "_blank" to <a> by BY -->
                     {% if site.jianshu_username %}
