--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -130,7 +130,7 @@
                     {% endif %}
                 </ul>
                 <p class="copyright text-muted">
-                    Copyright &copy; 2022-{{ site.time | date: '%Y' }} {{ site.title }}
+                    Copyright &copy; 2022-{{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.
 
                     <!-- 隐私协议（暂时隐藏）
                     <br>
